--- a/Travel.css
+++ b/Travel.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
@@ -13,7 +14,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background-color: #fcfbfb;
+    background-color: #ffffff;
     color: #000000;
 }
 
@@ -64,10 +65,128 @@ h1{
     font-size: 110px;
     margin-top: -500px;
     padding: 0px 0 0 25px;
+    position: relative;
 }
 
 h3{
     color: red;
-    margin-top: -50px;
+    margin-top: 50px;
+    margin-bottom: -60px;
+    padding: 0 0 0 30px;
 
+}
+h2{
+    color: #6d6c6c;
+    padding: 0 0 0 30px;
+}
+.search_bar
+{
+    display: flex ;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #ffffff;
+    color: #000000;
+    border: 2px;
+}
+.search-bar {
+    display: flex;
+    justify-content: left;
+    gap: 10px;
+    margin-bottom: 40px;
+    margin: 50px;
+
+    
+}
+
+.search-bar input, .search-bar select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search-bar button {
+    padding: 10px 15px;
+    border: none;
+    background-color: orange;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.top-destinations {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.top-destinations h2 {
+    font-size: 24px;
+    color: #5c2b0a;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card {
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 350px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+}
+
+.card img {
+    width: 200%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.card-content {
+    padding: 15px;
+    text-align: center;
+    height: 300px;
+}
+
+.card-content h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #5c2b0a;
+}
+
+.card-content p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.stars {
+    color: #e1e1e1;
+}
+
+.stars .filled {
+    color: orange;
+}
+
+.middle h2{
+    color: #FD7817;
+    padding: 50px 0 0 20px;
+    
+}
+
+#services p{
+    font-size: 55px;
+    
+    font-weight: bold;
+    margin: 0 0 0 30px;
+}
+section{
+    background-color: #F4D9AF;
+    border-radius: 30px;
 }
